# murmur

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  mmr_store  test
.github/workflows/: rust.yml
artifacts/: metadata.scale
cli/: Cargo.toml  README.md  generate_metadata.sh
cli/artifacts/: metadata.scale
cli/src/: main.rs  mmr_store
core/: Cargo.toml  README.md
core-wasm/: Cargo.toml  README.md  wasm_build.sh
core-wasm/src/: lib.rs
core/src/: lib.rs  murmur.rs  otp.rs  types.rs
device/: Cargo.toml
device/src/: main.rs
docs/murmur/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/murmur/docs/: intro.md
docs/murmur/docs/learn/: _category_.json  architecture.md  idn_tle.md  protocol.md
docs/murmur/docs/quick_start/: _category_.json  browser.md  discord.md  local.md  overview.md  protocol.md  twitch.md
docs/murmur/src/components/HomepageFeatures/: index.js  styles.module.css
docs/murmur/src/pages/: api.js  index.js
lib/: Cargo.toml  README.md
lib/artifacts/: metadata.scale
lib/src/: lib.rs
src/: main.rs  otp.rs
test-utils/: Cargo.toml  README.md
test-utils/src/: lib.rs
