[package]
name = "otp-wallet-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.34.0"
subxt-signer = "0.34.0"
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
totp-rs = "5.5.1"
# etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk/", branch = "main" } 
etf-crypto-primitives = { path = "../etf-sdk/etf-crypto-primitives" }
clap = { version = "4.1.1", features = ["derive"] }
rand_chacha = "0.3.1"
ckb-merkle-mountain-range = "0.5.2"
# blake2b = "0.10.6"
sha3 = "0.10.8"
serde_cbor = "0.11.2"
# bytes = "1.4.0"
serde_json = "1.0.108"
indicatif = "0.17.8"
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1"  }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
node-runtime = { path = "../etf/runtime" }
codec = { package = "parity-scale-codec", version = "3.2.2", features = [
	"derive",
] }
serde = { version = "1.0.188", features = ["alloc", "derive"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
# pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }

