[package]
name = "murmur-core"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[lib]
name = "murmur"
path = "src/lib.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
totp-rs = "5.5.1"
codec = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"], default-features = false }
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk/", branch = "tony/dev", default-features = false} 
rand_chacha = "0.3.1"
ckb-merkle-mountain-range = "0.5.2"
sha3 = "0.10.8"
# serde_cbor = "0.11.2"
# serde_json = "1.0.108"
serde = { version = "1.0.188", features = ["alloc", "derive"], default-features = false}
beefy = { package = "sp-consensus-beefy-etf", git = "https://github.com/ideal-lab5/etf.git", branch = "tony/dev", features = ["bls-experimental"] } 
ark-bls12-377 = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
w3f-bls = { version = "0.1.3", default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }
rand_core = { version = "0.6.4", features = ["getrandom"], default-features = false }
hex = { version = "0.4.3" }
array-bytes = { version = "6.1" }
# add zeroize 
# 1.8.1

[features]
default = ["std"]
std = ["ark-std/std", "getrandom/std", "rand_core/std", "serde/std", "sha3/std", "codec/std"]
no_std = []