[package]
name = "murmur-core"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[lib]
name = "murmur"
path = "src/lib.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
totp-rs = { version = "5.5.1", default-features = false, optional = true }
getrandom = { version = "0.2", features = ["js"], default-features = false, optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"], default-features = false, optional = true }

codec = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"], default-features = false }
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk/", branch = "tony/dev", default-features = false} 
ckb-merkle-mountain-range = { version = "0.5.2", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
serde = { version = "1.0.188", features = ["alloc", "derive"], default-features = false}
ark-bls12-377 = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
w3f-bls = { version = "0.1.3", default-features = false }
hex = { version = "0.4.3", default-features = false }
array-bytes = { version = "6.1", default-features = false }
# add zeroize 
# 1.8.1

[features]
default = ["std"]
std = [
    "ark-std/std", 
    "ark-serialize/std",
    "ark-bls12-377/std",
    "ark-ff/std",
    "w3f-bls/std",
    # "getrandom/std", 
    # "rand_core/std", 
    "serde/std",
    "codec/std",
    "etf-crypto-primitives/std",
    "sha3/std",
    "ckb-merkle-mountain-range/std",
    "hex/std",
]
no_std = []
client = [
    "totp-rs",
    "getrandom",
    "rand_core",
]