[package]
name = "etf-otp-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.34.0"
subxt-signer = "0.34.0"
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
totp-rs = "5.5.1"
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk/", branch = "main" } 
clap = { version = "4.1.1", features = ["derive"] }
rand_chacha = "0.3.1"
ckb-merkle-mountain-range = "0.5.2"
blake2b-rs = "0.2.0"
bytes = "1.4.0"
serde_json = "1.0.108"
indicatif = "0.17.8"