[package]
name = "murmur-lib"
version = "0.1.0"
edition = "2021"
description = "Murmur library"
documentation = "https://docs.rs/murmur-lib"
readme = "README.md"
keywords = ["crypto", "wallet", "keyless"]
categories = ["development-tools", "command-line-interface"]
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = [
    "cdylib",
    "rlib", 
]

[[bin]]
name = "murmur"

[dependencies]
subxt = "0.35.2"
subxt-signer = "0.35.2"
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
clap = { version = "4.1.1", features = ["derive"] }
rand_chacha = "0.3.1"
ckb-merkle-mountain-range = "0.5.2"
sha3 = "0.10.8"
thiserror = "1.0"
serde_cbor = "0.11.2"
codec = { package = "parity-scale-codec", version = "3.6.12", features = [
	"derive",
] }
serde = { version = "1.0.188", features = ["alloc", "derive"] }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", features = ["bls-experimental"] }
beefy = { package = "sp-consensus-beefy-etf", git = "https://github.com/ideal-lab5/etf.git", branch = "murmur", features = ["bls-experimental"] }
ark-bls12-377 = "0.4.0"
ark-std = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
w3f-bls = "0.1.3"
murmur-core = { path = "../core/", features = ["client"] }
zeroize = "1.8.1"
hkdf = "0.12.4"


[dev-dependencies]
murmur-test-utils = { path = "../test-utils/" }
