[package]
name = "murmur-test-utils"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[lib]
name = "murmur_test_utils"
path = "src/lib.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rand_core = { version = "0.6.4", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
w3f-bls = { version = "0.1.3", default-features = false }
murmur-core = { package = "murmur-core", path = "../core/", features = ["client"] }

[features]
default = ["std"]
std = [
    "ark-serialize/std",
    "w3f-bls/std",
    "murmur-core/std",
]
no_std = []